css: Make sure to left-align headings

--- a/css/default.css
+++ b/css/default.css
@@ -136,6 +136,10 @@ h2, h3, h4 {
     line-height: 1.2;
 }
 
+h2, h3, h4, h5, h6 {
+    text-align: left;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--serif-fonts);
 }
